[tool.poetry]
name = "faultmap"
version = "0.1.3"
description = "FaultMap library"
authors = ["Simon Streicher <streichersj@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
control = ">=0.9.1"
networkx = ">=2.8"
seaborn = ">=0.11.2"
tables = ">=3.7.0"
numba = ">=0.55.1"
scikit-learn = ">=1.0.2"
jpype1 = ">=1.4.1"
pathos = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pylint = ">=2.13.8"
black = ">=22.3.0"
pre-commit = ">=2.19.0"
isort = ">=5.10.1"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
pytest-mock = ">=3.7.0"
pytest-asyncio = ">=0.18.3"

[tool.poetry.group.types.dependencies]
types-seaborn = "^0.13.0.2"
networkx-stubs = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="black"
