[project]
name = "faultmap"
version = "0.1.3"
description = "FaultMap library"
authors = [
    {name = "Simon Streicher", email = "streichersj@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "control>=0.9.1",
    "networkx>=3.0",
    "seaborn>=0.13.0",
    "tables>=3.10.0",
    "numba>=0.60.0",
    "scikit-learn>=1.4.0",
    "jpype1>=1.5.0",
    "pathos>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "black>=24.0.0",
    "pre-commit>=3.5.0",
    "isort>=5.13.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
]
types = [
    "types-seaborn>=0.13.0.2",
    "networkx-stubs>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
